# qt5_2d_test

./: .gitignore  CMakeLists.txt  LICENSE  gfx.cpp  gfx.hpp  gl_widget.cpp  gl_widget.hpp  keyboard_handler.cpp  keyboard_handler.hpp  main.cpp  main_window.cpp  main_window.hpp  qt5_2d_test.pro  qt5_2d_test.qrc
img/: snowflake1.cdr
